--- a/deefyplay-web/src/app/user/user.component.html
+++ b/deefyplay-web/src/app/user/user.component.html
@@ -1,16 +1,34 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th scope="col">ID</th>
       <th scope="col">Nome</th>
       <th scope="col">E-mail</th>
-      <th scope="col">N°</th>
+      <th scope="col">Editar</th>
+      <th scope="col">Excluir</th>
     </tr>
   </thead>
   <tbody>
       <tr *ngFor="let usuario of usuarios">
+        <td>{{usuario.id}}</td>
         <td>{{usuario.nome}}</td>
         <td>{{usuario.email}}</td>
-        <td>{{usuario.id}}</td>
+        <td>
+          <button
+            (click)="editar(usuario.id)"
+            class="btn btn-light"
+            placement="top" ngbTooltip="Editar dados do usuário">
+            <i class="bi bi-pencil"></i>
+          </button>
+        </td>
+        <td>
+          <button
+            (click)="excluir(usuario.id)"
+            class="btn btn-light"
+            data-toggle="tooltip"
+            placement="top" ngbTooltip="Excluir registro da base de dados">
+            <i class="bi bi-trash"></i>
+          </button>
+        </td>
       </tr>
-  </tbody>
-</table>  
+    </tbody>
