--- a/deefyplay-web/src/app/app.component.html
+++ b/deefyplay-web/src/app/app.component.html
@@ -29,10 +29,8 @@
       <div class="nav-item">
         <a class="nav-link active" aria-current="page" href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap</a>
       </div>
-       
       <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
-        <button class="btn btn-outline-success" style="margin-left: 10px" type="submit">Pesquisar</button>
+        <button type="button" class="btn btn-outline-danger" aria-current="page" href="Sair">Sair</button>
       </form>
     </div>
   </div>
