Penultima aula deefyplayer

--- a/deefyplay-web/src/app/app.component.html
+++ b/deefyplay-web/src/app/app.component.html
@@ -25,15 +25,12 @@
           <a class="nav-link active" aria-current="page" href="artista/">Artista</a>
         </li>
       </ul>
-    
       <div class="nav-item">
         <a class="nav-link active" aria-current="page" href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap</a>
       </div>
-      <form class="d-flex">
-        <button type="button" class="btn btn-outline-danger" aria-current="page" href="Sair">Sair</button>
-      </form>
     </div>
   </div>
+  <button (click)="sair()" class="btn btn-outline-danger float-end">Sair</button>
 </nav>
 <div>
   <div style="margin-left: 30px">
