--- a/deefyplay-web/src/app/album/album.component.html
+++ b/deefyplay-web/src/app/album/album.component.html
@@ -1,1 +1,32 @@
-<p>album works!</p>
+<table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Titulo</th>
+        <th scope="col">Editar</th>
+        <th scope="col">Excluir</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let album of albums">
+          <td>{{album.id}}</td>
+          <td>{{album.titulo}}</td>
+          <td>
+            <button
+              (click)="editar(album.id)"
+              class="btn btn-light"
+              placement="top" ngbTooltip="Editar dados do album">
+              <i class="bi bi-pencil"></i>
+            </button>
+          </td>
+          <td>
+            <button
+              (click)="excluir(album.id)"
+              class="btn btn-light"
+              data-toggle="tooltip"
+              placement="top" ngbTooltip="Excluir registro da base de dados">
+              <i class="bi bi-trash"></i>
+            </button>
+          </td>
+        </tr>
+      </tbody>
