--- a/deefyplay-web/src/app/app.component.html
+++ b/deefyplay-web/src/app/app.component.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="artista/">Artista</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="genero/">Genero</a>
+        </li>
       </ul>
       <div class="nav-item">
         <a class="nav-link active" aria-current="page" href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap</a>
