--- a/deefyplay-web/src/app/artista/artista.component.html
+++ b/deefyplay-web/src/app/artista/artista.component.html
@@ -1,1 +1,32 @@
-<p>artista works!</p>
+<table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Artista</th>
+        <th scope="col">Editar</th>
+        <th scope="col">Excluir</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let artista of artistas">
+          <td>{{artista.id}}</td>
+          <td>{{artista.nome}}</td>
+          <td>
+            <button
+              (click)="editar(artista.id)"
+              class="btn btn-light"
+              placement="top" ngbTooltip="Editar dados do artista">
+              <i class="bi bi-pencil"></i>
+            </button>
+          </td>
+          <td>
+            <button
+              (click)="excluir(artista.id)"
+              class="btn btn-light"
+              data-toggle="tooltip"
+              placement="top" ngbTooltip="Excluir registro da base de dados">
+              <i class="bi bi-trash"></i>
+            </button>
+          </td>
+        </tr>
+      </tbody>
