--- a/deefyplay-web/src/app/app.component.html
+++ b/deefyplay-web/src/app/app.component.html
@@ -3,7 +3,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="20" fill="currentColor" class="bi bi-activity" viewBox="4 0 16 16">
       <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2Z"/>
     </svg>
-    <a class="navbar-brand" href="http://localhost:4200/home/">Deefy Player</a>
+    <a class="navbar-brand" href="http://localhost:4200/home/"><b><i>Deefy Player</i></b></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,6 +26,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="genero/">Genero</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="cadastro/">Cadastro</a>
         </li>
       </ul>
       <div class="nav-item">
