--- a/deefyplay-web/src/app/editar-artista/editar-artista.component.html
+++ b/deefyplay-web/src/app/editar-artista/editar-artista.component.html
@@ -1,1 +1,16 @@
-<p>editar-artista works!</p>
+<div class="col col-lg-6">
+  <label class="form-label">Artista</label>
+  <input
+    id="nome"
+    [(ngModel)]="nome"
+    type="text"
+    class="form-control"
+    placeholder="Digite o nome da Artista">
+</div>
+
+<button
+  type="button"
+  (click)="salvar()"
+  class="btn btn-primary"
+  style="margin-top: 15px; margin-left: 15px;">Salvar</button>
+
