--- a/deefyplay-web/src/app/home/home.component.html
+++ b/deefyplay-web/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-
+<youtube-player
+  videoId="dQw4w9WgXcQ"
+  suggestedQuality="highres"
+  [height]="600"
+  [width]="1080"
+  [startSeconds]="43"
+  [endSeconds]="60">
+</youtube-player>
