--- a/deefyplay-web/src/styles.scss
+++ b/deefyplay-web/src/styles.scss
@@ -1,1 +1,11 @@
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
+.btn-light {
+  color: #212529;
+  background-color: #f8f9fa00;
+  border-color: #f8f9fa00;
+}
 /* You can add global styles to this file, and also import other style files */
+
+//ANOTAÇÕES
+//npm i @angular/youtube-player
